--- a/p8105_hw1_kb3246.md
+++ b/p8105_hw1_kb3246.md
@@ -14,6 +14,8 @@ Kasturi Bhamidipati
 
 # Problem 1
 
+### Summary of the dataset:
+
 ``` r
 data("penguins", package = "palmerpenguins")
 ```
@@ -67,3 +69,19 @@ Data summary
     collected for each penguin.
 
 -   The mean flipper length is 200.92mm.
+
+### Scatterplot:
+
+Here we have the scatter plot:
+
+``` r
+ggplot(penguins, aes(x=bill_length_mm, y=flipper_length_mm, color= species))+geom_point()
+```
+
+![](p8105_hw1_kb3246_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+
+``` r
+ggsave("scatterplot_penguins.pdf")
+```
+
+    ## Saving 7 x 5 in image
