--- a/p8105_hw1_kb3246.md
+++ b/p8105_hw1_kb3246.md
@@ -1,7 +1,9 @@
 Data Science HW-1
 ================
 Kasturi Bhamidipati
-2022-09-17
+09/23/2022
+
+First, we will load packages that are necessary to run this code!
 
     ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
     ## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
@@ -85,3 +87,63 @@ ggsave("scatterplot_penguins.pdf")
 ```
 
     ## Saving 7 x 5 in image
+
+# Problem 2
+
+### Creating the dataframe
+
+Creating the dataframe as per the problem requirement:
+
+-   x: a random sample of size 10 from a standard Normal distribution
+-   logic_x: indicates whether elements of the sample are greater than 0
+-   character_y: character vector of length 10
+-   factor_z: factor vector of length 10, with 3 different factor
+    “levels”; high, medium and low
+
+``` r
+problem2_df = 
+  tibble(
+     x = rnorm(n=10), 
+    logic_x = x>0,
+    character_y = c("1", "2", "3", "4", "5","6","7","8","9","10"),
+    factor_z = factor(c("low", "high", "medium", "medium", "low", "low", "high", "medium", "high", "high"))
+  )
+```
+
+### Taking the mean of each variable
+
+``` r
+mean(pull(problem2_df, x))
+```
+
+    ## [1] -0.5087462
+
+``` r
+mean(pull(problem2_df, logic_x))
+```
+
+    ## [1] 0.4
+
+``` r
+mean(pull(problem2_df, character_y))
+```
+
+    ## Warning in mean.default(pull(problem2_df, character_y)): argument is not numeric
+    ## or logical: returning NA
+
+    ## [1] NA
+
+``` r
+mean(pull(problem2_df, factor_z))
+```
+
+    ## Warning in mean.default(pull(problem2_df, factor_z)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+When I try taking the means for my variables, I get warning messages for
+both the character variable and the factor variable. However, for the
+logical variable, since it is a Boolean operator that is indicating
+whether the elements in my sample are greater than zero, by using 0s and
+1s (TRUE/FALSE), it is able to calculate the mean.
