Problem 2: made changes to my dataframe to include as.numeric variables, took means for the as.numeric variables

--- a/p8105_hw1_kb3246.md
+++ b/p8105_hw1_kb3246.md
@@ -5,6 +5,10 @@ Kasturi Bhamidipati
 
 First, we will load packages that are necessary to run this code!
 
+``` r
+library(tidyverse)
+```
+
     ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
     ## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
     ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
@@ -13,6 +17,11 @@ First, we will load packages that are necessary to run this code!
     ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
+
+``` r
+library(palmerpenguins)
+library(skimr)
+```
 
 # Problem 1
 
@@ -98,7 +107,9 @@ Creating the dataframe as per the problem requirement:
 -   logic_x: indicates whether elements of the sample are greater than 0
 -   character_y: character vector of length 10
 -   factor_z: factor vector of length 10, with 3 different factor
-    “levels”; high, medium and low
+    “levels”; high, medium and low  
+-   I also created variables using the `as.numeric` function within this
+    dataframe to answer the questions within this problem
 
 ``` r
 problem2_df = 
@@ -106,7 +117,10 @@ problem2_df =
      x = rnorm(n=10), 
     logic_x = x>0,
     character_y = c("1", "2", "3", "4", "5","6","7","8","9","10"),
-    factor_z = factor(c("low", "high", "medium", "medium", "low", "low", "high", "medium", "high", "high"))
+    factor_z = factor(c("low", "medium", "high", "medium", "low", "low", "high", "medium", "high", "high")),
+    logic_xnum = as.numeric(logic_x),
+    character_ynum = as.numeric(character_y),
+    factor_znum = as.numeric(factor_z)
   )
 ```
 
@@ -116,13 +130,13 @@ problem2_df =
 mean(pull(problem2_df, x))
 ```
 
-    ## [1] -0.5087462
+    ## [1] 0.04887262
 
 ``` r
 mean(pull(problem2_df, logic_x))
 ```
 
-    ## [1] 0.4
+    ## [1] 0.5
 
 ``` r
 mean(pull(problem2_df, character_y))
@@ -147,3 +161,17 @@ both the character variable and the factor variable. However, for the
 logical variable, since it is a Boolean operator that is indicating
 whether the elements in my sample are greater than zero, by using 0s and
 1s (TRUE/FALSE), it is able to calculate the mean.
+
+### Taking means for the converted variables (using the `as.numeric` function)
+
+``` r
+mean(pull(problem2_df, logic_xnum))
+mean(pull(problem2_df, character_ynum))
+mean(pull(problem2_df, factor_znum))
+```
+
+After using the `as.numeric` function, I see that the factor vectors and
+character vectors are behaving like a numeric value and hence it gives
+me a mean value without any errors/warnings. The logic vector however,
+gives me the same value since it behaved like a numeric value even prior
+to coercing it to one.
