--- a/p8105_hw1_kb3246.Rmd
+++ b/p8105_hw1_kb3246.Rmd
@@ -7,7 +7,7 @@ output: github_document
 
 First, we will load packages that are necessary to run this code! 
 
-```{r, echo=FALSE}
+```{r, results='hide'}
 library(tidyverse)
 library(palmerpenguins)
 library(skimr)
@@ -39,7 +39,7 @@ This is the Penguins data set:
 
 Here we have the scatter plot: 
   
-  ```{r, warning=FALSE}
+```{r, warning=FALSE}
 ggplot(penguins, aes(x=bill_length_mm, y=flipper_length_mm, color= species))+geom_point()
 ggsave("scatterplot_penguins.pdf")
 ```
@@ -54,7 +54,8 @@ Creating the dataframe as per the problem requirement:
 - x: a random sample of size 10 from a standard Normal distribution
 - logic_x: indicates whether elements of the sample are greater than 0
 - character_y: character vector of length 10
-- factor_z: factor vector of length 10, with 3 different factor “levels”; high, medium and low
+- factor_z: factor vector of length 10, with 3 different factor “levels”; high, medium and low\
+- I also created variables using the `as.numeric` function within this dataframe to answer the questions within this problem
 
 
 ```{r}
@@ -63,7 +64,10 @@ problem2_df =
      x = rnorm(n=10), 
     logic_x = x>0,
     character_y = c("1", "2", "3", "4", "5","6","7","8","9","10"),
-    factor_z = factor(c("low", "high", "medium", "medium", "low", "low", "high", "medium", "high", "high"))
+    factor_z = factor(c("low", "medium", "high", "medium", "low", "low", "high", "medium", "high", "high")),
+    logic_xnum = as.numeric(logic_x),
+    character_ynum = as.numeric(character_y),
+    factor_znum = as.numeric(factor_z)
   )
 ```
 
@@ -77,6 +81,16 @@ mean(pull(problem2_df, factor_z))
 ```
 
 When I try taking the means for my variables, I get warning messages for both the character variable and the factor variable. However, for the logical variable, since it is a Boolean operator that is indicating whether the elements in my sample are greater than zero, by using 0s and 1s (TRUE/FALSE), it is able to calculate the mean. 
+
+### Taking means for the converted variables (using the `as.numeric` function)
+
+```{r, results='hide'}
+mean(pull(problem2_df, logic_xnum))
+mean(pull(problem2_df, character_ynum))
+mean(pull(problem2_df, factor_znum))
+```
+
+After using the `as.numeric` function, I see that the factor vectors and character vectors are behaving like a numeric value and hence it gives me a mean value without any errors/warnings. The logic vector however, gives me the same value since it behaved like a numeric value even prior to coercing it to one.
 
 
 
