--- a/p8105_hw1_kb3246.md
+++ b/p8105_hw1_kb3246.md
@@ -130,13 +130,13 @@ problem2_df =
 mean(pull(problem2_df, x))
 ```
 
-    ## [1] 0.04887262
+    ## [1] -0.4309827
 
 ``` r
 mean(pull(problem2_df, logic_x))
 ```
 
-    ## [1] 0.5
+    ## [1] 0.3
 
 ``` r
 mean(pull(problem2_df, character_y))
@@ -160,7 +160,9 @@ When I try taking the means for my variables, I get warning messages for
 both the character variable and the factor variable. However, for the
 logical variable, since it is a Boolean operator that is indicating
 whether the elements in my sample are greater than zero, by using 0s and
-1s (TRUE/FALSE), it is able to calculate the mean.
+1s (TRUE/FALSE), it is able to calculate the mean. However,
+mathematically, this wouldn’t mean anything since we technically cannot
+take an average of a Boolean variable.
 
 ### Taking means for the converted variables (using the `as.numeric` function)
 
