--- a/p8105_hw1_kb3246.md
+++ b/p8105_hw1_kb3246.md
@@ -31,7 +31,7 @@ library(skimr)
 data("penguins", package = "palmerpenguins")
 ```
 
-This is the Penguins data set:
+This is the `penguins` data set:
 
 |                                                  |          |
 |:-------------------------------------------------|:---------|
@@ -89,7 +89,7 @@ Here we have the scatter plot:
 ggplot(penguins, aes(x=bill_length_mm, y=flipper_length_mm, color= species))+geom_point()
 ```
 
-![](p8105_hw1_kb3246_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+![](p8105_hw1_kb3246_files/figure-gfm/for%20the%20scatterplot-1.png)<!-- -->
 
 ``` r
 ggsave("scatterplot_penguins.pdf")
@@ -116,7 +116,7 @@ problem2_df =
   tibble(
      x = rnorm(n=10), 
     logic_x = x>0,
-    character_y = c("1", "2", "3", "4", "5","6","7","8","9","10"),
+    character_y = c("one", "two", "three", "four", "five","six","seven","eight","nine","ten"),
     factor_z = factor(c("low", "medium", "high", "medium", "low", "low", "high", "medium", "high", "high")),
     logic_xnum = as.numeric(logic_x),
     character_ynum = as.numeric(character_y),
@@ -124,19 +124,21 @@ problem2_df =
   )
 ```
 
+    ## Warning in eval_tidy(xs[[j]], mask): NAs introduced by coercion
+
 ### Taking the mean of each variable
 
 ``` r
 mean(pull(problem2_df, x))
 ```
 
-    ## [1] -0.4309827
+    ## [1] 0.2621874
 
 ``` r
 mean(pull(problem2_df, logic_x))
 ```
 
-    ## [1] 0.3
+    ## [1] 0.6
 
 ``` r
 mean(pull(problem2_df, character_y))
@@ -161,8 +163,8 @@ both the character variable and the factor variable. However, for the
 logical variable, since it is a Boolean operator that is indicating
 whether the elements in my sample are greater than zero, by using 0s and
 1s (TRUE/FALSE), it is able to calculate the mean. However,
-mathematically, this wouldn’t mean anything since we technically cannot
-take an average of a Boolean variable.
+mathematically, this wouldn’t mean anything since it doesn’t make sense
+to take an average of a Boolean variable.
 
 ### Taking means for the converted variables (using the `as.numeric` function)
 
@@ -173,7 +175,10 @@ mean(pull(problem2_df, factor_znum))
 ```
 
 After using the `as.numeric` function, I see that the factor vectors and
-character vectors are behaving like a numeric value and hence it gives
-me a mean value without any errors/warnings. The logic vector however,
-gives me the same value since it behaved like a numeric value even prior
-to coercing it to one.
+logic vectors are behaving like a numeric value and hence it gives me a
+mean value. However, the character vector does not give me a mean value
+and instead gives me an error that reads: ” NAs introduced by coercion”.
+This tells us that not all variable types can be coerced into behaving
+like another variable type. Another important thing to note would be
+whether coercing variables into a different type would actually produce
+meaningful results.
