--- a/p8105_hw1_kb3246.md
+++ b/p8105_hw1_kb3246.md
@@ -132,13 +132,13 @@ problem2_df =
 mean(pull(problem2_df, x))
 ```
 
-    ## [1] 0.2621874
+    ## [1] 0.2184175
 
 ``` r
 mean(pull(problem2_df, logic_x))
 ```
 
-    ## [1] 0.6
+    ## [1] 0.4
 
 ``` r
 mean(pull(problem2_df, character_y))
@@ -166,6 +166,10 @@ whether the elements in my sample are greater than zero, by using 0s and
 mathematically, this wouldn’t mean anything since it doesn’t make sense
 to take an average of a Boolean variable.
 
+Another interesting thing is that R will automatically read logical
+vectors as numeric when we use numeric functions on them. However, it
+does not do so for the other vector types- factor and character vectors.
+
 ### Taking means for the converted variables (using the `as.numeric` function)
 
 ``` r
@@ -179,6 +183,4 @@ logic vectors are behaving like a numeric value and hence it gives me a
 mean value. However, the character vector does not give me a mean value
 and instead gives me an error that reads: ” NAs introduced by coercion”.
 This tells us that not all variable types can be coerced into behaving
-like another variable type. Another important thing to note would be
-whether coercing variables into a different type would actually produce
-meaningful results.
+like another variable type.
